# scholaretl

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  AUTHORS.txt  CHANGELOG.md  Dockerfile  README.md  index.html  metadata.md  mkdocs.yml  pyproject.toml  search.html
.github/workflows/: ci.yaml  docker.yml  docs.yaml  docs_building.yaml  ecr.yml  release.yml
docs/: endpoints.md  index.md  installation.md  reference.md  setup.md
endpoints/: index.html
examples/: index.html
reference/: index.html
search/: search_index.json
setup/: index.html
src/scholaretl/: __init__.py  article.py  article_parser.py  utils.py
src/scholaretl/app/: __init__.py  config.py  dependencies.py  main.py
src/scholaretl/app/routers/: __init__.py  parsing.py
src/scholaretl/entrypoints/: __init__.py  scholaretl_api.py
tests/: article_parser_test.py  article_test.py  conftest.py  utils_test.py
tests/app/: __init__.py  test_main.py  test_parsing.py
tests/data/: 1411.7903v4.xml  biorxiv.xml  core_article.json  jats_article.xml  jats_article_from_efetch.xml  pubmed_article.xml  pubmed_articles.xml  scopus_abstract.xml  scopus_fulltext.xml  scopus_fulltext_cell.xml
tests/data/cord19/: metadata.csv
tests/data/cord19/document_parses/pmc_json/: PMC7140272.xml.json
